# stm32f7-freertos-plus-tcp-template

./: CMakeLists.txt  README.md  stm32f767zitx_FLASH.ld
Inc/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  clock.h  eth.h  gpio.h  main.h  network.h  rng.h  rtos.h  stm32f7xx_hal_conf.h  uart.h
Src/: clock.c  eth.c  gpio.c  main.c  network.c  rng.c  rtos.c  stm32f7xx_it.c  uart.c
cmake/: vscode_generated.cmake
